<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoiceActivity"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/search_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_movie"
        android:textColor="@color/gold"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_weight="1"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        />

    <TextView
        android:id="@+id/release_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:textColor="@color/gold"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_weight="1"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        />

    <TextView
        android:id="@+id/upcoming_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upcoming"
        android:textColor="@color/gold"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_weight="1"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/black"
        />

    <TextView
        android:id="@+id/popular_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular"
        android:textColor="@color/gold"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_weight="1"
        />

</androidx.appcompat.widget.LinearLayoutCompat>