<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:background="@color/movieBg">

        <ImageView
            android:id="@+id/imagePopMovie"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/namePopMovie"
            android:layout_width="250dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toEndOf="@+id/imagePopMovie"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/movie"
            android:textSize="20sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/movieDateRelease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/movieDate"
            app:layout_constraintBottom_toTopOf="@+id/movieRating"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/rating"
            android:textSize="15sp"
            android:textColor="@color/white"
            tools:text="@tools:sample/us_zipcodes"/>

        <TextView
            android:id="@+id/movieDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imagePopMovie"
            app:layout_constraintBottom_toBottomOf="@+id/movieRatingName"
            app:layout_constraintBottom_toTopOf="@+id/movieRatingName"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/date"
            android:textSize="15sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/movieRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/movieRatingName"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/rating"
            android:textSize="15sp"
            android:textColor="@color/white"
            tools:text="@tools:sample/us_zipcodes"/>

        <TextView
            android:id="@+id/movieRatingName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/imagePopMovie"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/rating"
            android:textSize="15sp"
            android:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>